# braintax4rust

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/: copilot-instructions.md
braintax/: CHANGELOG.md
core/: Cargo.toml
core/src/: app.rs  braintax_report.rs  collector.rs  complexity_visitor.rs  default_scorer.rs  derive_attr_scorer.rs  function_complexity.rs  generics_counter.rs  hidden_deps_counter.rs  lib.rs  macro_counter.rs  main.rs  module_stats.rs  name_opacity_counter.rs  overall_stats.rs  stdout_reporter.rs
core/src/traits/: scorer.rs
core/tests/: all_tests.rs  app_tests.rs  braintax_report_tests.rs  collector_tests.rs  default_scorer_tests.rs  derive_attr_scorer_tests.rs  fs_walk_tests.rs  function_complexity_tests.rs  generics_counter_tests.rs  hidden_deps_counter_tests.rs  macro_counter_tests.rs  main_tests.rs  module_stats_tests.rs  name_opacity_counter_tests.rs  overall_stats_tests.rs  stdout_reporter_tests.rs
fixture/base_cfg/: Cargo.toml
fixture/base_cfg/src/: compute.rs  lib.rs  placeholder.rs
fixture/base_cfg/tests/: analysis_tests.rs
fixture/base_depth1/: Cargo.toml
fixture/base_depth1/src/: lib.rs
fixture/base_depth1/tests/: analysis_tests.rs
fixture/base_flat/: Cargo.toml
fixture/base_flat/src/: compute.rs
fixture/base_flat/tests/: analysis_tests.rs
fixture/base_generics/: Cargo.toml
fixture/base_generics/src/: compute.rs  lib.rs
fixture/base_generics/tests/: analysis_tests.rs
fixture/base_macros/: Cargo.toml
fixture/base_macros/src/: compute.rs  lib.rs
fixture/base_macros/tests/: analysis_tests.rs
fixture/base_opaque/: Cargo.toml
fixture/base_opaque/src/: compute.rs
fixture/base_opaque/tests/: analysis_tests.rs
fixture/base_trait/: Cargo.toml
fixture/base_trait/src/: compute.rs  computer.rs  lib.rs  my_computer.rs
fixture/base_trait/tests/: analysis_tests.rs
fixture/base_trait_refined/: Cargo.toml
fixture/base_trait_refined/src/: compute.rs
fixture/base_trait_refined/tests/: analysis_tests.rs
fixtures/base_cfg/: Cargo.toml
fixtures/base_cfg/src/: compute.rs  lib.rs
fixtures/base_cfg/tests/: analysis_tests.rs
fixtures/base_depth1/: Cargo.toml
fixtures/base_depth1/src/: lib.rs
fixtures/base_depth1/tests/: analysis_tests.rs
fixtures/base_flat/: Cargo.toml
fixtures/base_flat/src/: compute.rs
fixtures/base_flat/tests/: analysis_tests.rs
fixtures/base_trait/: Cargo.toml
fixtures/base_trait/src/: compute.rs  lib.rs  my_computer.rs
fixtures/base_trait/tests/: analysis_tests.rs
scripts/: run_stage_1.ps1  run_stage_2.ps1
src/: app.rs  args.rs  collector.rs  complexity_visitor.rs  config.rs  default_scorer.rs  function_complexity.rs  lib.rs  main.rs  overall_stats.rs  stdout_reporter.rs
src/traits/: reporter.rs
test-utils/: Cargo.toml
test-utils/src/: capture_reporter.rs  lib.rs
tests/: all_tests.rs  app_tests.rs  args_tests.rs  braintax_report_tests.rs  collector_tests.rs  complexity_visitor_tests.rs  config_tests.rs  default_scorer_tests.rs  fixture_tests.rs  fs_walk_tests.rs  main_tests.rs  module_stats_tests.rs  overall_stats_tests.rs  stdout_reporter_tests.rs
(+17 files in other folders)
