[workspace]
members = [
    "core",
    "test-utils",
    "fixture/base_flat",
    "fixture/base_depth1",
    "fixture/base_cfg",
    "fixture/base_trait",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
tempfile = "3"
