[package]
name = "cargo-braintax4rust"
version = "0.2.0"
edition = "2024"
description = "A cognitive tax estimator for Rust code -- quantify the mental effort required to understand a function"
authors = ["Umberto Gotti <umberto.gotti@umbertogotti.dev>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/umbgtt10/braintax4rust"
keywords = ["cargo", "subcommand", "complexity", "cognitive", "cli"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

autotests = false

[lib]
name = "braintax"

[[test]]
name = "all_tests"
path = "tests/all_tests.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
walkdir.workspace = true

[dev-dependencies]
braintax-test-utils.workspace = true
tempfile.workspace = true
